# supershell

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  README.org  comments_kay.org  compile_commands.json  executor.h  minishell  new.txt  pycodestyle.cfg  talk_ast1.org  tester_errors.md  tester_errors.org  tester_errors.txt  todo.org
Libft/: ft_atoi.c  ft_calloc.c  ft_isalpha.c  ft_itoa.c  ft_lstadd_front.c  ft_lstdelone.c  ft_lstiter.c  ft_putendl_fd.c  ft_striteri.c  ft_strlcat.c  ft_strlcpy.c  ft_strtrim.c  libft.h
bak/: test_export.py  test_minishell_redirection.py  test_minishell_signals.py.bak  test_redirection_errors.py
chats/: ast_logical_chat.org  talk_ast2.org
include/: executor.h  executor_builtins.h  executor_expansions.h  lexer.h  lexer_kay.h  minishell.h  mock_system_calls.h  parser.h
include/Libft/: Makefile  ft_isdigit.c  ft_lstadd_back.c  ft_lstadd_front.c  ft_lstclear.c  ft_lstdelone.c  ft_lstiter.c  ft_lstlast.c  ft_lstmap.c  ft_lstnew.c  ft_lstsize.c  ft_strdup.c  libft.h
libft/: CMakeLists.txt  Makefile  ft_bzero.c  ft_dllstadd_back.c  ft_dllstadd_front.c  ft_dllstclear.c  ft_dllstdelone.c  ft_dllstfirst.c  ft_dllstiter.c  ft_dllstlast.c  ft_dllstmap.c  ft_dllstnew.c  ft_dllstsize.c  ft_isalnum.c  ft_isascii.c  ft_isprint.c  ft_isspace.c  ft_lstadd_back.c  ft_lstadd_front.c  ft_lstclear.c  ft_lstdelone.c  ft_lstiter.c  ft_lstlast.c  ft_lstmap.c  ft_lstnew.c  ft_lstsize.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_putchar_fd.c  ft_putnbr_fd.c  ft_putstr_fd.c  ft_split.c  ft_strchr.c  ft_strcmp.c  ft_strdup.c  ft_strjoin.c  ft_strlen.c  (+9 more)
run/: main.c
src/: debuging_functions.c  execute_cmd.c  execute_pipeline.c  executor.c  executor_arguments.c  executor_builtin_cd.c  executor_builtin_cd_1.c  executor_builtin_cd_2.c  executor_builtin_env.c  executor_builtin_exit.c  executor_builtin_export_1.c  executor_builtin_pwd.c  executor_builtin_unset.c  executor_cmd_path.c  executor_env.c  executor_expand_variables.c  executor_export.c  executor_export_1.c  executor_export_2.c  executor_export_3.c  executor_free.c  executor_handle_dollar.c  executor_handle_double_quotes.c  executor_handle_literal.c  executor_handle_utils.c  executor_handle_wildcard.c  executor_handle_wildcard_1.c  executor_handle_wildcard_2.c  executor_helpers.c  executor_matrix_manipulation.c  executor_pattern_matcher.c  executor_prepare_argv.c  executor_redirections.c  executor_sort_arguments.c  executor_unset.c  executor_wildcard_kay.c  executor_word_expansions.c  format_input_1.c  format_input_2.c  free.c  (+24 more)
src/builtins/: env.c  executor_builtin_cd_2.c  executor_builtin_env.c  executor_builtin_exit.c  executor_builtin_export_1.c  executor_builtin_export_2.c  executor_builtin_pwd.c  executor_builtin_unset.c  export_2.c  pwd.c
src/executor/: execute.c  execute_cmd.c  execute_cmd_1.c  (+8 more)
tests/: test_main.cpp
(+129 files in other folders)
